force-app/main/default/objects/Opportunity/fields/Amount2__c.field-meta.xml
<CustomField>
    <fullName>Amount2__c</fullName>
    <formula>Amount</formula>
    <label>Amount2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>