force-app/main/default/objects/Opportunity/fields/C_digo_de_Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Cotizaci_n__c</fullName>
    <label>Código de Cotización</label>
    <length>14</length>
    <type>Text</type>
</CustomField>