force-app/main/default/objects/Opportunity/fields/C_mo_Conoci_Thermoandina__c.field-meta.xml
<CustomField>
    <fullName>C_mo_Conoci_Thermoandina__c</fullName>
    <label>¿Cómo Conoció Thermoandina?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Página Web</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Voz a Voz</fullName>
            </value>
            <value>
                <fullName>Prospección</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>