force-app/main/default/objects/Opportunity/fields/Calificaci_n_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Calificaci_n_de_Oportunidad__c</fullName>
    <label>Calificación de Oportunidad</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>