force-app/main/default/objects/Opportunity/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo de tipo relación entre los objetos de oportunidades y categoria.</description>
    <label>Categoría</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>