force-app/main/default/objects/Opportunity/fields/Causa_de_Cierre_Compra__c.field-meta.xml
<CustomField>
    <fullName>Causa_de_Cierre_Compra__c</fullName>
    <label>Causa de Cierre Compra</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Cierre_Compra__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Causa_de_Cierre_Compra</valueSetName>
    </valueSet>
</CustomField>