force-app/main/default/objects/Opportunity/fields/Causa_de_Cierre_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Causa_de_Cierre_Presupuestal__c</fullName>
    <label>Causa de Cierre Presupuestal</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Cierre_Presupuestal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Causade_Cierre_Presupuestal</valueSetName>
    </valueSet>
</CustomField>