force-app/main/default/objects/Opportunity/fields/Compromisos_de_Negociaci_n__c.field-meta.xml
<CustomField>
    <fullName>Compromisos_de_Negociaci_n__c</fullName>
    <label>Compromisos de Negociación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mantenimiento Incluido</fullName>
            </value>
            <value>
                <fullName>Repuestos Incluidos</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>