force-app/main/default/objects/Opportunity/fields/Contador_Contratos_Aprobados__c.field-meta.xml
<CustomField>
    <fullName>Contador_Contratos_Aprobados__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contador Contratos Aprobados</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>