force-app/main/default/objects/Opportunity/fields/Conteo_Cotizaci_n_Sync__c.field-meta.xml
<CustomField>
    <fullName>Conteo_Cotizaci_n_Sync__c</fullName>
    <label>Conteo Cotización Sync</label>
    <summaryFilterItems>
        <field>Cotizaci_n__c.Sincronizar_Cotizaci_n__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Cotizaci_n__c.Nombre_del_Proyecto__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>