force-app/main/default/objects/Opportunity/fields/Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Cotizaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotización</label>
    <referenceTo>Cotizaci_n__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>