force-app/main/default/objects/Opportunity/fields/Cuadro_de_tems__c.field-meta.xml
<CustomField>
    <fullName>Cuadro_de_tems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuadro de Ítems</label>
    <type>Checkbox</type>
</CustomField>