force-app/main/default/objects/Opportunity/fields/Decisi_n__c.field-meta.xml
<CustomField>
    <fullName>Decisi_n__c</fullName>
    <label>Decisión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>