force-app/main/default/objects/Opportunity/fields/Descripci_n_Detallada__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_Detallada__c</fullName>
    <label>Descripción Detallada</label>
    <type>TextArea</type>
</CustomField>