force-app/main/default/objects/Opportunity/fields/Documento_de_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Documento_de_Aprobaci_n__c</fullName>
    <label>Documento de Aprobación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documentos_de_Aprobaci_n</valueSetName>
    </valueSet>
</CustomField>