force-app/main/default/objects/Opportunity/fields/Env_o_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Env_o_de_Contrato__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío de Contrato</label>
    <type>Checkbox</type>
</CustomField>