force-app/main/default/objects/Opportunity/fields/Especificaciones__c.field-meta.xml
<CustomField>
    <fullName>Especificaciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Especificaciones</label>
    <type>Checkbox</type>
</CustomField>