force-app/main/default/objects/Opportunity/fields/Fecha_de_ltima_Revisi_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_ltima_Revisi_n__c</fullName>
    <label>Fecha de Última Revisión</label>
    <type>Date</type>
</CustomField>