force-app/main/default/objects/Opportunity/fields/Fecha_de_Ofertada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ofertada__c</fullName>
    <label>Fecha de Ofertada</label>
    <type>Date</type>
</CustomField>