force-app/main/default/objects/Opportunity/fields/Hoja_Calificaci_n_Pol_tica_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Hoja_Calificaci_n_Pol_tica_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hoja Calificación Política Comercial</label>
    <referenceTo>Hoja_de_Calificaci_n__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>