force-app/main/default/objects/Opportunity/fields/IDCategoria__c.field-meta.xml
<CustomField>
    <fullName>IDCategoria__c</fullName>
    <description>Campo que permite relaciones el objeto oportunidades con categorías a través del campo Categoria.</description>
    <label>IDCategoria</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>