force-app/main/default/objects/Opportunity/fields/Informe_Levantamiento_de_Requerimientos__c.field-meta.xml
<CustomField>
    <fullName>Informe_Levantamiento_de_Requerimientos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informe Levantamiento de Requerimientos</label>
    <type>Checkbox</type>
</CustomField>