force-app/main/default/objects/Opportunity/fields/IVA_Pesos_COP__c.field-meta.xml
<CustomField>
    <fullName>IVA_Pesos_COP__c</fullName>
    <label>IVA Pesos (COP)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>