force-app/main/default/objects/Opportunity/fields/Margen_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Margen_de_Venta__c</fullName>
    <label>Margen de Venta</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>