force-app/main/default/objects/Opportunity/fields/Observaciones_Aprobaci_n__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Aprobaci_n__c</fullName>
    <label>Observaciones Aprobación</label>
    <type>TextArea</type>
</CustomField>