force-app/main/default/objects/Opportunity/fields/Observaciones_Cierre_Compra__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Cierre_Compra__c</fullName>
    <label>Observaciones Cierre Compra</label>
    <type>TextArea</type>
</CustomField>