force-app/main/default/objects/Opportunity/fields/Observaciones_Cierre_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Cierre_Presupuestal__c</fullName>
    <label>Observaciones Cierre Presupuestal</label>
    <type>TextArea</type>
</CustomField>