force-app/main/default/objects/Opportunity/fields/Observaciones_Compromisos_de_Negociaci_n__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Compromisos_de_Negociaci_n__c</fullName>
    <label>Observaciones Compromisos de Negociación</label>
    <type>TextArea</type>
</CustomField>