force-app/main/default/objects/Opportunity/fields/Planos__c.field-meta.xml
<CustomField>
    <fullName>Planos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planos</label>
    <type>Checkbox</type>
</CustomField>