force-app/main/default/objects/Opportunity/fields/Pliegos_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>Pliegos_Condiciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pliegos/Condiciones</label>
    <type>Checkbox</type>
</CustomField>