force-app/main/default/objects/Opportunity/fields/Sync_Cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Sync_Cotizaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotización Sincronizada</label>
    <type>Checkbox</type>
</CustomField>