force-app/main/default/objects/Opportunity/fields/Tipo_de_Cierre_Compra__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cierre_Compra__c</fullName>
    <label>Tipo de Cierre Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Cierre_Compra</valueSetName>
    </valueSet>
</CustomField>