force-app/main/default/objects/Opportunity/fields/Tipo_de_Cierre_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cierre_Presupuestal__c</fullName>
    <label>Tipo de Cierre Presupuestal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Cierre_Presupuestal</valueSetName>
    </valueSet>
</CustomField>