force-app/main/default/objects/Opportunity/fields/Tipo_de_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Oferta__c</fullName>
    <label>Tipo de Oferta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Oferta</valueSetName>
    </valueSet>
</CustomField>