force-app/main/default/objects/Opportunity/fields/Valor_Sin_IVA_Pesos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Sin_IVA_Pesos__c</fullName>
    <label>Valor Sin IVA (Pesos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>