force-app/main/default/objects/Opportunity/recordTypes/Ofertas_para_decision_de_compra.recordType-meta.xml
<RecordType>
    <fullName>Ofertas_para_decision_de_compra</fullName>
    <active>true</active>
    <businessProcess>Ofertas para decisión de compra</businessProcess>
    <description>Proceso de ofertas para decisión de compra</description>
    <label>Ofertas para Decisión de Compra</label>
</RecordType>