force-app/main/default/objects/Opportunity/recordTypes/Ofertas_Presupuestales.recordType-meta.xml
<RecordType>
    <fullName>Ofertas_Presupuestales</fullName>
    <active>true</active>
    <businessProcess>Ofertas presupuestales</businessProcess>
    <description>Proceso de ofertas presupuestales</description>
    <label>Ofertas Presupuestales</label>
</RecordType>