force-app/main/default/objects/Opportunity/validationRules/Validacion_BloquearPerdida.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_BloquearPerdida</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(StageName) ,OR(AND(
ISPICKVAL(StageName, &quot;Calificada Presupuestal&quot;),ISPICKVAL(PRIORVALUE(StageName), &quot;Perdida - Presupuestal&quot;)
),AND(
ISPICKVAL(StageName, &quot;Generada Presupuestal&quot;),ISPICKVAL(PRIORVALUE(StageName), &quot;Perdida - Presupuestal&quot;)
), AND(
ISPICKVAL(StageName, &quot;Ofertada Presupuestal&quot;),ISPICKVAL(PRIORVALUE(StageName), &quot;Perdida - Presupuestal&quot;)
),AND(
ISPICKVAL(StageName, &quot;Identificada Presupuestal&quot;),ISPICKVAL(PRIORVALUE(StageName), &quot;Perdida - Presupuestal&quot;)
) ))</errorConditionFormula>
    <errorMessage>La Oportunidad ya se encuentra perdida, no puede regresar a ningún otro estado.</errorMessage>
</ValidationRule>