force-app/main/default/objects/Opportunity/validationRules/Validacion_ContratoActivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_ContratoActivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Contador_Contratos_Aprobados__c &lt; 1, ISBLANK(Contador_Contratos_Aprobados__c ) ), ISPICKVAL( StageName , &quot;Adjudicada - Compra&quot;) )</errorConditionFormula>
    <errorMessage>Por favor verifique que existe un Contrato Activo para poder continuar con el proceso.</errorMessage>
</ValidationRule>