force-app/main/default/objects/Opportunity/validationRules/Validacion_ImposibilidadCreacionOP.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_ImposibilidadCreacionOP</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Account.Estado_de_Cuenta__c , &quot;Inactiva&quot;) ,OR( ISPICKVAL( StageName , &quot;Identificada Presupuestal&quot;), ISPICKVAL( StageName , &quot;Identificada Compra&quot;) ))</errorConditionFormula>
    <errorMessage>No es posible generar oportunidades para Cuentas en estado Inactivo. Por favor actualice el estado de la Cuenta para poder continuar con el proceso.</errorMessage>
</ValidationRule>