force-app/main/default/objects/Opportunity/validationRules/Validacion_Ofertada.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Ofertada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISCHANGED( StageName ),
	OR(	
		ISPICKVAL( Ingenieros_de_Ofertas__c , &quot;&quot;),  
		ISBLANK( C_digo_de_Cotizaci_n__c ),
		ISBLANK( Fecha_de_Ofertada__c ),
		ISBLANK( Fecha_de_ltima_Revisi_n__c ),
		ISBLANK( Valor_Sin_IVA_Pesos__c ),
		ISBLANK( IVA_Pesos_COP__c ),
		ISBLANK( Amount ),
		ISBLANK( Margen_de_Venta__c )
	),
			
	OR( ISPICKVAL( StageName , &quot;Ofertada Presupuestal&quot;),  
		ISPICKVAL( StageName , &quot;Ofertada Compra&quot;),
		ISPICKVAL( StageName , &quot;Adjudicada - Presupuestal&quot;),
		ISPICKVAL( StageName , &quot;Adjudicada - Compra&quot;),
		ISPICKVAL( StageName , &quot;Pre Cierre&quot;)
	)
)</errorConditionFormula>
    <errorMessage>Por favor verifique que se encuentran diligenciados todos los campos en la Sección &quot;Cotización&quot; para poder continuar con el proceso.</errorMessage>
</ValidationRule>