force-app/main/default/objects/Opportunity/validationRules/Validacion_Perdida_Compra.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Perdida_Compra</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISPICKVAL( Tipo_de_Cierre_Compra__c , &quot;&quot;),  ISPICKVAL(  Causa_de_Cierre_Compra__c , &quot;&quot;), ISBLANK( Observaciones_Cierre_Compra__c )   ), ISPICKVAL( StageName , &quot;Perdida - Compra&quot;) )</errorConditionFormula>
    <errorMessage>Por favor diligencie todos los campos de la sección &quot;Oportunidad Perdida&quot; para poder continuar con el proceso.</errorMessage>
</ValidationRule>