force-app/main/default/objects/Opportunity/validationRules/Validacion_Perdida_Presupuestal.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Perdida_Presupuestal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISPICKVAL( Tipo_de_Cierre_Presupuestal__c , &quot;&quot;),  ISPICKVAL(  Causa_de_Cierre_Presupuestal__c , &quot;&quot;), ISBLANK( Observaciones_Cierre_Presupuestal__c )   ), ISPICKVAL( StageName , &quot;Perdida - Presupuestal&quot;) )</errorConditionFormula>
    <errorMessage>Por favor diligencie todos los campos en la Sección &quot;Oportunidad Perdida&quot; para poder continuar con el proceso.</errorMessage>
</ValidationRule>