force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Tipo_de_Oferta__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Tipo_de_Cierre_Compra__c</columns>
    <columns>Tipo_de_Cierre_Presupuestal__c</columns>
    <columns>Fecha_de_Ofertada__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Oportunidades</label>
</ListView>